--- a/source/sass/components/program-type.scss
+++ b/source/sass/components/program-type.scss
@@ -29,10 +29,29 @@
     position: absolute;
     top: 24px;
     left: 23px;
+
+    @media (min-width: $tablet-width) {
+      width: 200px;
+      height: 200px;
+
+      top: 92px;
+      left: auto;
+      right: 61px;
+    }
   }
 
   &:first-child {
     margin-bottom: 20px;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    margin: 0 29px;
+
+    min-height: 372px;
   }
 }
 
@@ -42,13 +61,24 @@
   width: 36px;
   height: 50px;
 
-  background: url("../img/cat-weight-loss.svg") no-repeat;
+  background: url("../img/cat-weight-loss-mobile.svg") no-repeat;
   background-position: 0 0;
 
   position: absolute;
   top: 21px;
   left: 30px;
   z-index: 5;
+
+  @media (min-width: $tablet-width) {
+    width: 140px;
+    height: 194px;
+
+    background-image: url("../img/cat-weight-loss-tablet.svg");
+
+    top: 81px;
+    left: auto;
+    right: 91px;
+  }
 }
 
 .program-type__item--gain::after {
@@ -57,13 +87,24 @@
   width: 67px;
   height: 28px;
 
-  background: url("../img/cat-weight-gain.svg") no-repeat;
+  background: url("../img/cat-weight-gain-mobile.svg") no-repeat;
   background-position: 0 0;
 
   position: absolute;
   top: 35px;
   left: 14px;
   z-index: 5;
+
+  @media (min-width: $tablet-width) {
+    width: 268px;
+    height: 112px;
+
+    background-image: url("../img/cat-weight-gain-tablet.svg");
+
+    top: 135px;
+    left: auto;
+    right: 27px;
+  }
 }
 
 .program-type__title {
@@ -95,6 +136,10 @@
     bottom: -23px;
 
     background-color: $background-color-11;
+
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
   }
 }
 
