--- a/source/sass/components/program-type.scss
+++ b/source/sass/components/program-type.scss
@@ -1,5 +1,9 @@
 .program-type {
   padding-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 45px;
+  }
 }
 
 .program-type__list {
