--- a/source/sass/components/work-principle.scss
+++ b/source/sass/components/work-principle.scss
@@ -1,5 +1,9 @@
 .work-principle {
   padding: 0 20px 50px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 30px 50px;
+  }
 }
 
 .work-principle__title {
@@ -10,7 +14,7 @@
   font: $font-title-large-mobile;
 
   @media (min-width: $tablet-width) {
-    padding-left: 11px;
+    margin-bottom: 72px;
 
     font: $font-title-x-large-tablet;
   }
@@ -18,6 +22,12 @@
 
 .work-principle__list {
   @include list-reset;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 37px 135px;
+  }
 }
 
 .work-principle__item {
@@ -42,6 +52,9 @@
     background-color: $background-color-3;
 
     @media (min-width: $tablet-width) {
+      margin: 0 0 31px;
+      padding-right: 0;
+
       width: 80px;
       height: 80px;
     }
@@ -58,8 +71,13 @@
       background-position: 0 0;
 
       position: absolute;
-      left: 19px;
       top: 16px;
+      left: 19px;
+
+      @media (min-width: $tablet-width) {
+        top: 27px;
+        left: 27px;
+      }
     }
   }
 
@@ -74,8 +92,13 @@
       background-position: 0 0;
 
       position: absolute;
-      left: 19px;
       top: 16px;
+      left: 19px;
+
+      @media (min-width: $tablet-width) {
+        top: 26px;
+        left: 28px;
+      }
     }
   }
 
@@ -90,8 +113,13 @@
       background-position: 0 0;
 
       position: absolute;
-      left: 19px;
       top: 15px;
+      left: 19px;
+
+      @media (min-width: $tablet-width) {
+        top: 25px;
+        left: 29px;
+      }
     }
   }
 
@@ -106,13 +134,29 @@
       background-position: 0 0;
 
       position: absolute;
-      left: 19px;
       top: 15px;
+      left: 19px;
+
+      @media (min-width: $tablet-width) {
+        top: 25px;
+        left: 28px;
+      }
     }
   }
 
   &:not(:last-child) {
     margin-bottom: 20px;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 0;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 249px;
+    min-height: 280px;
+
+    flex-direction: column;
   }
 }
 
@@ -120,6 +164,20 @@
   @include margin-reset;
   padding-top: 2px;
 
+  position: relative;
+
   font: $font-text-medium-mobile;
   color: $color-5;
+
+  // &--leaf {
+  //   &::after {
+  //     content: "1";
+  //   }
+  // }
+
+  @media (min-width: $tablet-width) {
+    padding-top: 0;
+
+    font: $font-text-medium-tablet;
+  }
 }
