--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -76,6 +76,10 @@ $font-button-program-type-tablet: 400 2rem / normal "Oswald", "Arial",
 $font-button-program-type-desktop: 400 2rem / normal "Oswald", "Arial",
   sans-serif;
 
+/* work-principle fonts */
+$font-number-work-principle-tablet: 400 28rem/1 "Oswald", "Arial", sans-serif;
+$font-number-work-principle-desktop: 400 28rem/1 "Oswald", "Arial", sans-serif;
+
 /* living-example fonts */
 $font-title-living-example-heading-mobile: 400 2.4rem/1 "Oswald", "Arial",
   sans-serif;
