--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -1,6 +1,6 @@
 .main-header {
   @media (min-width: $tablet-width) {
-    padding: 0 30px 36px;
+    padding: 22px 30px 36px;
 
     min-height: 54px;
   }
