--- a/source/sass/components/nutrition.scss
+++ b/source/sass/components/nutrition.scss
@@ -22,7 +22,10 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding: 0 0 526px 120px;
+    margin: 0 auto;
+    padding: 0 0 526px 91px;
+
+    width: 709px;
   }
 }
 
