--- a/source/sass/components/work-principle.scss
+++ b/source/sass/components/work-principle.scss
@@ -2,7 +2,10 @@
   padding: 0 20px 50px;
 
   @media (min-width: $tablet-width) {
-    padding: 0 30px 50px;
+    margin: 0 auto;
+    padding: 0 0 7px;
+
+    width: 709px;
   }
 }
 
@@ -218,6 +221,12 @@
   }
 
   &--watch {
+    @media (max-width: $mobile-width-only) {
+      br {
+        display: none;
+      }
+    }
+
     &::after {
       @media (min-width: $tablet-width) {
         content: "4";
