--- a/source/sass/components/living-example.scss
+++ b/source/sass/components/living-example.scss
@@ -35,6 +35,7 @@
   color: $color-5;
 
   @media (min-width: $tablet-width) {
+    margin: 0 0 55px;
     padding: 0;
 
     font: $font-text-medium-tablet;
@@ -45,11 +46,24 @@
   }
 }
 
+.living-example__description-container {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .living-example__list {
   margin: 0 20px 35px;
 
   display: flex;
   justify-content: space-between;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+
+    width: 367px;
+  }
 }
 
 .living-example__item {
@@ -63,6 +77,13 @@
   text-align: center;
 
   position: relative;
+
+  @media (min-width: $tablet-width) {
+    padding: 16px 0 0;
+
+    width: 162px;
+    min-height: 77px;
+  }
 }
 
 .living-example__item-heading {
@@ -70,6 +91,10 @@
 
   font: $font-title-living-example-heading-mobile;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font: $font-title-living-example-heading-tablet;
+  }
 }
 
 .living-example__item-text {
@@ -81,12 +106,24 @@
 
   width: 87px;
   background-color: $background-color-12;
+
+  @media (min-width: $tablet-width) {
+    background-color: $background-color-2;
+
+    width: auto;
+
+    font: $font-text-small-tablet;
+  }
 }
 
 .living-example__item {
   &:first-child {
     .living-example__item-text {
       width: 81px;
+
+      @media (min-width: $tablet-width) {
+        width: auto;
+      }
     }
   }
 }
@@ -95,14 +132,35 @@
   margin-bottom: 21px;
 
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    padding: 12px 0 0;
+    margin: 0;
+
+    text-align: right;
+  }
 }
 
 .living-example__result-expenses {
   font: $font-title-living-example-result-mobile;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+
+    margin: 0 0 8px;
+
+    font: $font-title-living-example-result-tablet;
+  }
 }
 
 .living-example__result-price {
   font: $font-title-living-example-result-mobile;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+
+    font: $font-title-living-example-result-tablet;
+  }
 }
