--- a/source/sass/components/living-example.scss
+++ b/source/sass/components/living-example.scss
@@ -67,7 +67,7 @@
 }
 
 .living-example__item {
-  padding: 14px 0 0;
+  padding: 14px 10px 0;
   border: 1px solid $background-color-13;
   border-radius: 5px;
 
@@ -79,10 +79,11 @@
   position: relative;
 
   @media (min-width: $tablet-width) {
-    padding: 16px 0 0;
+    padding: 16px 13px 0;
+    border-radius: 3px;
 
     width: 162px;
-    min-height: 77px;
+    min-height: 72px;
   }
 }
 
@@ -122,7 +123,17 @@
       width: 81px;
 
       @media (min-width: $tablet-width) {
-        width: auto;
+        width: 114px;
+      }
+    }
+  }
+}
+
+.living-example__item {
+  &:nth-child(2) {
+    .living-example__item-text {
+      @media (min-width: $tablet-width) {
+        width: 132px;
       }
     }
   }
