--- a/source/sass/components/cat-result.scss
+++ b/source/sass/components/cat-result.scss
@@ -1,9 +1,32 @@
 .cat-result {
   display: flex;
+  justify-content: center;
 
   margin: 0 20px;
 
   position: relative;
+  z-index: 1;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+
+    left: -47px;
+
+    width: 100vw;
+
+    &::after {
+      content: "";
+
+      width: 100%;
+      height: 462px;
+
+      position: absolute;
+      bottom: -99px;
+      z-index: -1;
+
+      background-color: $background-color-7;
+    }
+  }
 }
 
 .cat-result__image {
