стилизовал location в планшетном разрешении

--- a/source/sass/components/living-example.scss
+++ b/source/sass/components/living-example.scss
@@ -4,7 +4,7 @@
   padding: 25px 0 39px;
 
   @media (min-width: $tablet-width) {
-    padding: 45px 30px 0;
+    padding: 45px 30px 99px;
     border-top: 1px solid $background-color-9;
 
     background-color: $background-color-2;
