Стилизовал элементы, проверил переполнение соц сетей в футере

--- a/source/sass/components/social.scss
+++ b/source/sass/components/social.scss
@@ -6,6 +6,17 @@
   justify-content: space-between;
 
   width: 48%;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+
+    justify-content: flex-start;
+    flex-wrap: wrap;
+
+    width: 132px;
+
+    gap: 10px 22px;
+  }
 }
 
 .social__link {
