--- a/source/sass/components/main-footer.scss
+++ b/source/sass/components/main-footer.scss
@@ -21,6 +21,10 @@
     background-color: $background-color-11;
 
     position: absolute;
+
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
   }
 
   &::before {
@@ -31,6 +35,16 @@
   &::after {
     bottom: 96px;
     left: 0;
+  }
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+
+    margin: 0;
+    padding: 60px 30px 30px;
+
+    min-height: 147px;
   }
 }
 
@@ -49,6 +63,10 @@
   &:active {
     opacity: 0.6;
   }
+
+  @media (min-width: $tablet-width) {
+    margin: 0 40px 0 0;
+  }
 }
 
 .main-footer__html-academy-logo {
@@ -63,43 +81,23 @@
 
   position: relative;
 
-  // &::before {
-  //   content: "";
-  //   display: block;
-
-  //   width: 100%;
-  //   height: 1px;
-
-  //   background-color: $background-color-11;
-
-  //   position: absolute;
-  //   top: -21px;
-  //   left: 0;
-  // }
-
-  // &::after {
-  //   content: "";
-  //   display: block;
-
-  //   width: 100%;
-  //   height: 1px;
-
-  //   background-color: $background-color-11;
-
-  //   position: absolute;
-  //   top: -83px;
-  //   left: 0;
-  // }
-
   &:hover {
     path {
       fill: $background-color-3;
     }
   }
-}
 
-.main-footer__html-academy-logo {
   &:active {
     opacity: 0.3;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin: -7px 0 0 -4px;
+    padding: 0 0 0 7px;
+
+    width: 168px;
+    min-height: 37px;
+
+    align-self: flex-start;
   }
 }
