ограничил ширину в тексте html academy, чтобы логотип не уменьшался. Закончил верстку в планшете

--- a/source/sass/components/main-footer.scss
+++ b/source/sass/components/main-footer.scss
@@ -101,3 +101,9 @@
     align-self: flex-start;
   }
 }
+
+.main-footer__html-academy-text {
+  @media (min-width: $tablet-width) {
+    max-width: 120px;
+  }
+}
