Приступил к десктопу, начал с шапки, стилизовал под дескопное разрешение

--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -4,6 +4,10 @@
 
     min-height: 54px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 53px 112px 0px 109px;
+  }
 }
 
 .main-header__wrapper {
