добавил bottom вместо top для псевдоэлемента в планшетной версии в nutrition, чтобы проходило переполнение

--- a/source/sass/components/nutrition.scss
+++ b/source/sass/components/nutrition.scss
@@ -14,7 +14,7 @@
         center;
 
       position: absolute;
-      top: 201px;
+      bottom: 0px;
       left: 50%;
 
       transform: translateX(-50%);
