Добавил белый фон псевдоэлементу на главной странице - ссылке

--- a/source/sass/components/main-nav.scss
+++ b/source/sass/components/main-nav.scss
@@ -204,7 +204,9 @@
       background-color: $background-color-3;
     }
   }
+}
 
+.main-nav__link--index-active {
   @media (min-width: $desktop-width) {
     &::after {
       background-color: $background-color-2;
