--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -10,18 +10,18 @@
 
     position: relative;
 
-    &::after {
-      content: "";
+    // &::after {
+    //   content: "";
 
-      width: 720px;
-      height: 694px;
+    //   width: 720px;
+    //   height: 694px;
 
-      background: url("../img/bg-nutrition-desktop.png") no-repeat center;
+    //   background: url("../img/bg-nutrition-desktop.png") no-repeat center;
 
-      position: absolute;
-      top: 0;
-      right: 0;
-    }
+    //   position: absolute;
+    //   top: 0;
+    //   right: 0;
+    // }
   }
 }
 
