Добавил псевдоэлемент в body в десктопе, при переполнении навигации зеленый фон с котом будет расстягиваться

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,7 @@
 @import "./utils/visually-hidden.scss";
 
 /* components */
+@import "./components/page-body.scss";
 @import "./components/main-header.scss";
 @import "./components/main-nav.scss";
 @import "./components/main-container.scss";
