--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -24,6 +24,7 @@ $color-11: #d9d9d9;
 $color-12: #eaeaea;
 $color-13: #cdcdcd;
 $color-14: #5eaa2f;
+$color-15: #64a63b;
 
 /* background-color */
 $background-color-1: #000000;
@@ -40,6 +41,7 @@ $background-color-11: #d9d9d9;
 $background-color-12: #eaeaea;
 $background-color-13: #cdcdcd;
 $background-color-14: #5eaa2f;
+$background-color-15: #64a63b;
 
 /* button-fonts */
 $font-button-nutrition-mobile: 400 1.4rem/1.28 "Oswald", "Arial", sans-serif;
