--- a/source/sass/components/main-header.scss
+++ b/source/sass/components/main-header.scss
@@ -6,22 +6,12 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 53px 112px 33px 109px;
+    padding: 53px 0 33px;
+    margin: 0 auto;
+
+    width: 1220px;
 
     position: relative;
-
-    // &::after {
-    //   content: "";
-
-    //   width: 720px;
-    //   height: 694px;
-
-    //   background: url("../img/bg-nutrition-desktop.png") no-repeat center;
-
-    //   position: absolute;
-    //   top: 0;
-    //   right: 0;
-    // }
   }
 }
 
