--- a/source/sass/components/work-principle.scss
+++ b/source/sass/components/work-principle.scss
@@ -38,7 +38,7 @@
     gap: 37px 135px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     column-gap: 74px;
   }
 }
