--- a/source/sass/components/location.scss
+++ b/source/sass/components/location.scss
@@ -27,7 +27,7 @@
   max-width: 143px;
 
   @media (min-width: $tablet-width) {
-    width: 210px;
+    max-width: 170px;
 
     font: $font-title-location-tablet;
   }
