--- a/source/sass/components/work-principle.scss
+++ b/source/sass/components/work-principle.scss
@@ -8,7 +8,7 @@
     width: 709px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     padding: 0 0 0;
 
     width: 1220px;
