выровнил элеметы по pp в десктопе

--- a/source/sass/components/work-principle.scss
+++ b/source/sass/components/work-principle.scss
@@ -27,6 +27,13 @@
 
     font: $font-title-x-large-tablet;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 72px;
+    padding: 0;
+
+    font: $font-title-x-large-tablet;
+  }
 }
 
 .work-principle__list {
