--- a/source/sass/components/cat-result.scss
+++ b/source/sass/components/cat-result.scss
@@ -27,6 +27,12 @@
       background-color: $background-color-7;
     }
   }
+
+  @media (min-width: $desktop-width) {
+    &::after {
+      display: none;
+    }
+  }
 }
 
 .cat-result__image {
