--- a/source/sass/components/living-example.scss
+++ b/source/sass/components/living-example.scss
@@ -10,8 +10,17 @@
     background-color: $background-color-2;
   }
 
-  @media (min-width: $tablet-width) {
-    padding: 45px 30px 99px;
+  @media (min-width: $desktop-width) {
+    padding: 28px 0 0;
+    border-top: none;
+  }
+}
+
+.living-example__wrapper {
+  @media (min-width: $desktop-width) {
+    padding: 70px 0 0 110px;
+
+    background-color: $background-color-4;
   }
 }
 
@@ -27,6 +36,11 @@
     padding: 0;
 
     font: $font-title-large-tablet;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 76px;
+    padding: 0 0 0 110px;
   }
 }
 
@@ -47,6 +61,12 @@
     br {
       display: none;
     }
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 70px;
+
+    max-width: 433px;
   }
 }
 
@@ -120,6 +140,10 @@
     width: auto;
 
     font: $font-text-small-tablet;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-color: $background-color-4;
   }
 }
 
