--- a/source/sass/components/cat-result.scss
+++ b/source/sass/components/cat-result.scss
@@ -22,6 +22,7 @@
 
       position: absolute;
       bottom: -99px;
+      left: 17px;
       z-index: -1;
 
       background-color: $background-color-7;
@@ -29,6 +30,11 @@
   }
 
   @media (min-width: $desktop-width) {
+    margin: -137px 0 0;
+
+    width: 560px;
+    height: 512px;
+
     &::after {
       display: none;
     }
