--- a/source/sass/components/living-example.scss
+++ b/source/sass/components/living-example.scss
@@ -11,16 +11,25 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 28px 0 0;
+    padding: 29px 0 0;
     border-top: none;
+  }
+}
+
+.living-example__block {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+
+    min-height: 461px;
+
+    background-color: $background-color-4;
   }
 }
 
 .living-example__wrapper {
   @media (min-width: $desktop-width) {
     padding: 70px 0 0 110px;
-
-    background-color: $background-color-4;
   }
 }
 
@@ -41,6 +50,8 @@
   @media (min-width: $desktop-width) {
     margin: 0 0 76px;
     padding: 0 0 0 110px;
+
+    max-width: 500px;
   }
 }
 
@@ -77,6 +88,12 @@
 
     margin: 0 0 104px;
   }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: column;
+
+    margin: 0;
+  }
 }
 
 .living-example__list {
@@ -89,6 +106,10 @@
     margin: 0;
 
     width: 367px;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 60px;
   }
 }
 
@@ -182,6 +203,14 @@
 
     text-align: right;
   }
+
+  @media (min-width: $desktop-width) {
+    padding: 0;
+
+    display: flex;
+
+    text-align: left;
+  }
 }
 
 .living-example__result-expenses {
@@ -194,6 +223,11 @@
     margin: 0 0 8px;
 
     font: $font-title-living-example-result-tablet;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 64px 0 0;
+    padding: 0 0 0 2px;
   }
 }
 
