--- a/source/sass/components/main-footer.scss
+++ b/source/sass/components/main-footer.scss
@@ -1,5 +1,7 @@
 .main-footer {
   position: relative;
+
+  background-color: $background-color-4;
 }
 
 .main-footer__wrapper {
@@ -46,6 +48,12 @@
 
     min-height: 147px;
   }
+
+  @media (min-width: $tablet-width) {
+    padding: 72px 109px 0;
+
+    min-height: 169px;
+  }
 }
 
 .main-footer__logo {
@@ -67,6 +75,10 @@
   @media (min-width: $tablet-width) {
     margin: 0 40px 0 0;
   }
+
+  // @media (min-width: $desktop-width) {
+  //   margin: 0;
+  // }
 }
 
 .main-footer__html-academy-logo {
@@ -99,6 +111,11 @@
     min-height: 37px;
 
     align-self: flex-start;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: -7px 0 0;
+    padding: 0;
   }
 }
 
