--- a/source/sass/components/main-footer.scss
+++ b/source/sass/components/main-footer.scss
@@ -77,10 +77,6 @@
   @media (min-width: $tablet-width) {
     margin: 0 40px 0 0;
   }
-
-  // @media (min-width: $desktop-width) {
-  //   margin: 0;
-  // }
 }
 
 .main-footer__html-academy-logo {
@@ -118,6 +114,8 @@
   @media (min-width: $desktop-width) {
     margin: -7px 0 0;
     padding: 0;
+
+    width: 163px;
   }
 }
 
