переименовал папку с components на blocks

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,30 +10,30 @@
 // @import "./utils/container.scss";
 @import "./utils/visually-hidden.scss";
 
-/* components */
-@import "./components/page-body.scss";
-@import "./components/main-header.scss";
-@import "./components/main-nav.scss";
-@import "./components/main-container.scss";
-@import "./components/nutrition.scss";
-@import "./components/button.scss";
-// @import "./components/title.scss";
-@import "./components/program-type.scss";
-@import "./components/work-principle.scss";
-@import "./components/living-example.scss";
-@import "./components/cat-result.scss";
-@import "./components/location.scss";
-@import "./components/main-footer.scss";
-@import "./components/social.scss";
-// @import "./components/catalog.scss";
-@import "./components/catalog-card.scss";
-@import "./components/additional-products.scss";
-@import "./components/additional-product-card.scss";
-// @import "./components/main-form.scss";
-@import "./components/cat-information.scss";
-@import "./components/label-text.scss";
-@import "./components/label-radio.scss";
-@import "./components/contact-details.scss";
-@import "./components/comment.scss";
-@import "./components/additional.scss";
-@import "./components/label-checkbox.scss";
+/* blocks */
+@import "./blocks/page-body.scss";
+@import "./blocks/main-header.scss";
+@import "./blocks/main-nav.scss";
+@import "./blocks/main-container.scss";
+@import "./blocks/nutrition.scss";
+@import "./blocks/button.scss";
+// @import "./blocks/title.scss";
+@import "./blocks/program-type.scss";
+@import "./blocks/work-principle.scss";
+@import "./blocks/living-example.scss";
+@import "./blocks/cat-result.scss";
+@import "./blocks/location.scss";
+@import "./blocks/main-footer.scss";
+@import "./blocks/social.scss";
+// @import "./blocks/catalog.scss";
+@import "./blocks/catalog-card.scss";
+@import "./blocks/additional-products.scss";
+@import "./blocks/additional-product-card.scss";
+// @import "./blocks/main-form.scss";
+@import "./blocks/cat-information.scss";
+@import "./blocks/label-text.scss";
+@import "./blocks/label-radio.scss";
+@import "./blocks/contact-details.scss";
+@import "./blocks/comment.scss";
+@import "./blocks/additional.scss";
+@import "./blocks/label-checkbox.scss";
