--- a/source/sass/blocks/program-type.scss
+++ b/source/sass/blocks/program-type.scss
@@ -2,7 +2,7 @@
   padding-bottom: 21px;
 
   @media (min-width: $tablet-width) {
-    padding-bottom: 45px;
+    padding-bottom: 46px;
   }
 
   @media (min-width: $desktop-width) {
@@ -45,15 +45,15 @@
 
     position: absolute;
     top: 24px;
-    left: 23px;
+    left: 20px;
 
     @media (min-width: $tablet-width) {
       width: 200px;
       height: 200px;
 
-      top: 92px;
+      top: 93px;
       left: auto;
-      right: 64px;
+      right: 65px;
     }
 
     @media (min-width: $desktop-width) {
@@ -105,7 +105,7 @@
 
   position: absolute;
   top: 21px;
-  left: 30px;
+  left: 27px;
   z-index: 5;
 
   @media (min-width: $tablet-width) {
@@ -114,9 +114,9 @@
 
     background-image: url("../img/cat-weight-loss-tablet.svg");
 
-    top: 81px;
+    top: 82px;
     left: auto;
-    right: 94px;
+    right: 95px;
   }
 
   @media (min-width: $desktop-width) {
@@ -142,7 +142,7 @@
 
   position: absolute;
   top: 35px;
-  left: 14px;
+  left: 12px;
   z-index: 5;
 
   @media (min-width: $tablet-width) {
@@ -151,9 +151,9 @@
 
     background-image: url("../img/cat-weight-gain-tablet.svg");
 
-    top: 135px;
+    top: 136px;
     left: auto;
-    right: 30px;
+    right: 31px;
   }
 
   @media (min-width: $desktop-width) {
@@ -173,13 +173,12 @@
   font: $font-title-medium-mobile;
   text-transform: uppercase;
 
-  margin-bottom: 30px;
-  padding-top: 6px;
-  padding-left: 71px;
+  margin: 0 0 30px;
+  padding: 6px 0 0 69px;
 
   @media (min-width: $tablet-width) {
     padding: 1px 1px 0;
-    margin-bottom: 24px;
+    margin-bottom: 25px;
 
     font: $font-title-medium-tablet;
 
@@ -208,7 +207,7 @@
     height: 1px;
 
     position: absolute;
-    bottom: -23px;
+    bottom: -22px;
 
     background-color: $background-color-11;
 
@@ -268,7 +267,7 @@
     margin-left: -49px;
 
     position: absolute;
-    top: 2px;
+    top: 1px;
     left: 100%;
 
     width: 24px;
