подключил файл title, начал стилизацию формы с мобильной версии

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,7 +11,7 @@
 @import "./utils/visually-hidden.scss";
 
 /* components */
-// @import "./components/title.scss";
+@import "./components/title.scss";
 @import "./components/button.scss";
 @import "./components/description.scss";
 
