стилизовал заголовок и описание в форме под мобильное разрешение, добавил нижний бордер в форме и в каталоге в хэдере

--- a/source/sass/blocks/main-header.scss
+++ b/source/sass/blocks/main-header.scss
@@ -1,4 +1,8 @@
 .main-header {
+  &--line {
+    border-bottom: 1px solid $background-color-11;
+  }
+
   @media (min-width: $tablet-width) {
     padding: 30px 32px 66px 30px;
 
