--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -145,6 +145,11 @@ $font-title-medium-mobile: 400 2.4rem/1.54 "Oswald", "Arial", sans-serif;
 $font-title-medium-tablet: 400 3.6rem/1 "Oswald", "Arial", sans-serif;
 $font-title-medium-desktop: 400 3.6rem/1 "Oswald", "Arial", sans-serif;
 
+/* description-fonts */
+$font-description-large-mobile: 400 1.4rem/1.28 "Oswald", "Arial", sans-serif;
+$font-description-large-tablet: 400 2rem/1.5 "Oswald", "Arial", sans-serif;
+$font-description-large-desktop: 400 2rem/1.5 "Oswald", "Arial", sans-serif;
+
 /* text-fonts */
 $font-text-medium-mobile: 400 1.4rem/1.28 "Lato", "Arial", sans-serif;
 $font-text-medium-tablet: 400 1.6rem/1.5 "Lato", "Arial", sans-serif;
